# Knuth-FLRNG

./: .gitignore  COPYING  README.md
KFLRNGD/F77/: CMakeLists.txt  kflrng-unix.mk  kflrngd-main.f  kflrngd-nrandom.f  kflrngd-rngnxt.f  knuth-frngdb.f  rnaprt.f
KFLRNGD/FIV/: CMakeLists.txt  kflrng-unix.mk  kflrngd-main.f  kflrngd-nrandom.f  kflrngd-rngnxt.f  knuth-frngdb-IV.f
KFLRNGD/FIV/jcl/: README.md  kflrcm.jcl  kflrcnr.jcl  kflrngcl.jcl  kflrrm.jcl  kflrrnr.jcl
KFLRNGI/F77/: kflrngi-main.f  rnaprt.f
KFLRNGI/FIV/: kflrngi-main.f  kflrngi-nrandom.f  kflrngi-rngnxt.f  kflrngi-unix.mk  knuth-flrngi.f
